--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="manifest" href="/manifest.json" />
 	<link rel="manifest" href="/app.webmanifest" crossorigin="use-credentials" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="友好的描述可能提升用户信任">
 </head>
 
 <body>
