--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Music</title>
 	<link rel="manifest" href="/manifest.json" />
 	<link rel="manifest" href="/app.webmanifest" crossorigin="use-credentials" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="description" content="友好的描述可能提升用户信任">
 </head>
 
